# riff-chess

./: CLAUDE.md  Cargo.toml  README.md
src/: lib.rs
src/board/: backrank.rs  castling.rs  material.rs  mod.rs  moves.rs  play.rs  position.rs  review.rs  san.rs  square.rs
src/game/: mod.rs
