[package]
name = "riff-chess"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
once_cell = "1.18.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
strum = "0.25.0"
strum_macros = "0.25.3"
thiserror = "1.0.50"
